src/github.com/ebay/beam/query/parser/testdata/select/errors/wrong_sep.bql
select ?rim, ?size
where {
    ?rim rdf:type products:rims
    ?rim <size> ?size
}
